# Ozgun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  fix_inference.py  fix_inference2.py  fix_inference3.py  fix_inference4.py  proje_durumu_raporu.md  refactor_inference.py  tilk_dil_raporu.md  update_html.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: native_backend_plan.md
examples/: ornek11_string_interpolasyon.oz  ornek12_lambda.oz  ornek15_turkce_unicode.oz
kullanim_kilavuzu/: 01_giris_ve_tasarim.md  02_sozdizimi_kurallari.md  03_degiskenler_ve_tipler.md  04_kosul_yapilari.md  05_donguler.md  06_islevler_ve_recursion.md  07_diziler_ve_haritalar.md  08_hata_yonetimi_hata_ise.md  09_asenkron_tamamlaninca.md  10_dosya_io_islemleri.md  11_zaman_ve_uyku.md  12_matematik_fonksiyonlari.md  13_lexer_ve_tokenlar.md  14_parser_ve_ast.md  15_tip_kontrol_sistemi.md  16_derleyici_ve_bytecode.md  17_sanal_makine_vm_mimarisi.md  18_slot_index_duzenleme.md  19_short_circuit_mantigi.md  20_escape_dizileri.md  21_ariadne_ve_hata_teshisi.md  22_golden_file_testler.md  23_cicd_pipeline.md  24_c_codegen_makine_kodu.md  25_proje_manifestosu_tilk_toml.md  26_cli_arac_zinciri.md  27_web_playground_arayuzu.md  28_unicode_ve_nfc_normalizasyonu.md  29_gelecek_yol_haritasi.md  30_ornek_uygulamalar_katalogu.md
ornek_proje/: tilk.toml
ornek_proje/kaynak/: ana.oz
oz-cli/: Cargo.toml
oz-lexer/: Cargo.toml
oz-lsp/: Cargo.toml
oz-lsp/src/: main.rs
oz-parser/: Cargo.toml
oz-wasm/: Cargo.toml
playground/: index.html
(+25 files in other folders)
