[package]
name = "oz-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oz-lexer = { path = "../oz-lexer" }
oz-parser = { path = "../oz-parser" }
logos.workspace = true

